k8s/dev-servers/amin-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
---
apiVersion: v1
kind: Service
metadata:
 name: amin-dev
 namespace: development
spec:
 ports:
 - port: 3000
   targetPort: 3000
 selector:
   app: amin-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: amin-dev
  name: amin-dev
  namespace: development
spec:
  selector:
    matchLabels:
      app: amin-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: amin-dev
    spec:
      nodeSelector:
        role: worker-lg
      containers:
      - image: litcodes/theia:latest
        imagePullPolicy: Always
        name: amin-dev
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /home/project
            name: project-dir 
      volumes:
        - name: project-dir
          persistentVolumeClaim:
            claimName: amin-dev-pvc
