k8s/dev-servers/gagik-dev.yml
---
apiVersion: v1
kind: Service
metadata:
 name: gagik-dev
 namespace: development
spec:
 ports:
 - port: 8081
   name: gagik-api
   targetPort: 8081
 - port: 8080
   name: gagik-ui
   targetPort: 8080
 - port: 3000
   name: gagik-dev
   targetPort: 3000
 selector:
   app: gagik-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gagik-dev
  name: gagik-dev
  namespace: development
spec:
  selector:
    matchLabels:
      app: gagik-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: gagik-dev
    spec:
      nodeSelector:
        role: worker-lg
      containers:
      - image: litcodes/theia:latest
        imagePullPolicy: Always
        name: gagik-dev
        ports:
        - containerPort: 3000
        - containerPort: 8080
        - containerPort: 8081
        volumeMounts:
          - mountPath: /home/project
            name: project-dir 
      volumes:
        - name: project-dir
          persistentVolumeClaim:
            claimName: gagik-dev-pvc
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gagik-dev
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gagik-dev.lit.codes`)
    middlewares:
    - name: dev-basic-auth
      namespace: default
    kind: Rule
    services:
    - name: gagik-dev
      port: 3000
      namespace: development
  - match: Host(`gagik-api.lit.codes`)
    kind: Rule
    services:
    - name: gagik-dev
      port: 8081
      namespace: development
  - match: Host(`gagik-ui.lit.codes`)
    kind: Rule
    services:
    - name: gagik-dev
      port: 8080
      namespace: development
  tls:
    secretName: cloudflarecrtsecret
